--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,71 +1,116 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: "Introduction"
+descripton: "Thanks for purchasing the 2mrw Boilerplate from me! Follow along to get the app up and running in 10-15 minutes!"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+<Info>
+    Feel free to reach out to me on [Twitter](https://www.x.com/timohuennebeck) in case of
+    questions, issues, feature suggestions, etc.
+</Info>
 
-## Setting up
+<Steps>
+    <Step title="Clone The Boilerplate From GitHub">
+        1. To get started, please run the following command to clone the repo from GitHub:
 
-The first step to world-class documentation is setting up your editing environments.
+        ```bash
+        git clone git@github.com:timohuennebeck/2mrw-boilerplate.git new-project-name
+        ```
 
-<CardGroup cols={2}>
-  <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+        2. Upon installing the repo, move into the new project (e.g. new-project-name)
 
-## Make it yours
+        ```bash
+        cd new-project-name
+        ```
 
-Update your docs to your brand and add valuable content for the best user conversion.
+        3. Let’s now remove the existing remote origin
 
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
-    icon="palette"
-    href="https://mintlify.com/docs/settings/global"
-  >
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
-  >
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card
-    title="Add Components"
-    icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/content/components/accordions"
-  >
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://mintlify.com/customers"
-  >
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+        ```bash
+        git remote remove origin
+        ```
+
+        4. You now have to create a new GitHub repo [here](https://github.com/new)
+
+        5. Let’s add the remote URL to our new GitHub repo
+
+        ```bash
+        git remote add origin https://github.com/username/new-repo.git
+        ```
+
+        6. Push the code
+
+        ```bash
+        git push -u origin main
+        ```
+
+        7. Let’s add the 2mrw (original) boilerplate as upstream (so that we can fetch future updates):
+
+        ```bash
+        git remote add upstream git@github.com:timohuennebeck/2mrw-boilerplate.git
+        ```
+
+        <Note>
+        In order to get future updates from the original boilerplate, use the following commands to fetch and merge the latest changes:
+        </Note>
+
+        ```bash
+        npm run repo:update
+        ```
+    </Step>
+    <Step title="Install dependencies">
+        ```bash
+        npm install
+        ```
+    </Step>
+    <Step title="Rename .env.example to .env.local">
+        You have a `.env.example` file in the root of the codebase. Let’s rename it to `.env.local`.
+
+        You should now have a `.env.local` file with the variables below. That’s it for now. Let’s continue to the configuration files section [here]().
+
+        ```typescript
+        NEXT_PUBLIC_SITE_URL=
+        NEXT_PUBLIC_SUPABASE_URL=
+        NEXT_PUBLIC_SUPABASE_ANON_KEY=
+        DEFAULT_SUPABASE_SERVICE_ROLE_KEY=
+        STRIPE_SECRET_KEY=
+        STRIPE_WEBHOOK_SECRET=
+        TRIAL_EXPIRES_DISCOUNT_CODE=
+        RESEND_API_KEY=
+        BUILD_VERSION=
+        ```
+
+        You can now continue with the rest of this guide to set up things such as the database, stripe, resend (emails), etc. to get the app running!
+    </Step>
+
+</Steps>
+
+### Project File Structure
+
+Here’s a quick overview of the codebase structure to get ourselves familiar with the boilerplate. Keep in mind that this doesn’t include folders such as `components, app`, etc.
+
+-   `/react-email-starter/` contains email templates
+
+-   `/supabase/` contains supabase edge functions and migration files
+
+-   `/src/middleware.ts` handles middleware (e.g. authentication, etc.).
+
+-   `/src/middleware/handlers` contains various functions and handlers that are used inside the middleware.ts file
+
+-   `/src/app/api/` handles API calls (each route.ts file is one API endpoint).
+
+-   `/src/config/` contains configuration files
+
+-   `/src/enums/` contains enums
+
+-   `/src/interfaces/` contains all interfaces that are not props from a component
+
+-   `/src/lib/qClient/` contains the React Query client configuration
+
+-   `utils/` contains functions such as formatting dates, handling Supabase errors, etc.
+
+-   `/src/services/` contains Supabase client and admin configurations, and centralises database interactions and queries.
+
+    -   `database/` database operations (e.g. HTTP requests, etc.)
+    -   `domain/` domain logic
+    -   `email/` email service
+    -   `integration/` external services such as Supabase, Loops, etc.
+    -   `stripe/` Stripe integration
