add hashtag icon

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Introduction"
 descripton: "Thanks for purchasing the 2mrw Boilerplate from me! Follow along to get the app up and running in 10-15 minutes!"
+icon: "hashtag"
 ---
 
 <Info>
