add launch in 5 mins guide

--- a/configuration/email.mdx
+++ b/configuration/email.mdx
@@ -13,7 +13,7 @@ Before customising our emails, please make sure to replace the `[INSERT_LOGO_URL
 
 <Steps>
     <Step title="Creating a Resend account">
-        You can sign up for a free account at [Resend](https://resend.com/)
+        You can sign up for a free account [here](https://resend.com/)
     </Step>
     <Step title="Setup SMTP in Supabase">
         Please refer to the [Resend SMTP](https://resend.com/changelog/supabase-integration)
@@ -61,8 +61,6 @@ Before customising our emails, please make sure to replace the `[INSERT_LOGO_URL
 
             FYI: Including these custom transactional emails is optional but provides a more pleasant user experience.
         </Note>
-
-        In this step, we’ll have to create various transactional emails based on the email.config.ts file.
 
         Inside our `email.config.ts` enable or disable the desired emails. That's it.
 
