--- a/production/publish-codebase.mdx
+++ b/production/publish-codebase.mdx
@@ -17,7 +17,15 @@ There are a lot of different services to publish a codebase to production. In th
     </Step>
 
     <Step title="Creating a Project + Importing (`.env`) Variables">
-        INSERT_VIDEO
+        <video
+            autoPlay
+            controls
+            muted
+            loop
+            playsInline
+            className="w-full aspect-video"
+            src="https://www.dropbox.com/scl/fi/aoh9lo3gdldushnclno4i/deploy-project.mp4?rlkey=627ccn8w9vxmylwh6cod3ne1l&st=yec3a5im&raw=1"
+        ></video>
 
         <Info>
             The **NEXT_PUBLIC_SITE_URL** should be the URL of your production environment. For instance, for me it would be **https://2mrw.dev** and not **http://localhost:3000**.
@@ -27,7 +35,15 @@ There are a lot of different services to publish a codebase to production. In th
     <Step title="Connecting Your Domain">
         This step is not detailed because it varies quite a bit between different hosting providers. For instance, as seen in the video below, we were provided with an **A and CNAME record** that we'll need to add to our domain provider's DNS settings.
 
-        INSERT_VIDEO
+        <video
+            autoPlay
+            controls
+            muted
+            loop
+            playsInline
+            className="w-full aspect-video"
+            src="https://www.dropbox.com/scl/fi/z5ms510mx7cq0eo6hbdhz/add-domain.mp4?rlkey=rdhkqb2ghca86ovpqo5htexzj&st=f82f58ah&raw=1"
+        ></video>
     </Step>
 
     <Step title="Setting Up Stripe For Production">
