--- a/launch-in-five-minutes.mdx
+++ b/launch-in-five-minutes.mdx
@@ -31,7 +31,7 @@ iconType: "solid"
     </Step>
 
     <Step title="Landing Page Configuration">
-        Update your landing page COPY and customise the components to match your brand.
+        Update your landing page copy and customise the components to match your brand.
 
         Feel free to refer to the components to see what these look like inside the app:
 
@@ -46,7 +46,7 @@ iconType: "solid"
         For detailed setup instructions, please refer to the guide below:
         - [Publishing the Codebase](/production/publish-codebase)
 
-        **TL;DR:** DEPLOY your project on Vercel or your preferred hosting provider.
+        **TL;DR:** Deploy your project on Vercel or your preferred hosting provider.
     </Step>
 
 </Steps>
