--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,13 +1,10 @@
 ---
 title: "Introduction"
-descripton: "Thanks for purchasing the 2mrw Boilerplate from me! Follow along to get the app up and running in 10-15 minutes!"
+description: "Thanks for purchasing the 2mrw Boilerplate from me! Follow along to get the app up and running in 10-15 minutes!"
 icon: "asterisk"
 ---
 
-<Info>
-    Feel free to reach out to me on [Twitter](https://www.x.com/timohuennebeck) in case of
-    questions, issues, feature suggestions, etc.
-</Info>
+Feel free to reach out to me on [Twitter](https://www.x.com/timohuennebeck) in case of questions, issues, feature suggestions, etc.
 
 <Steps>
     <Step title="Clone The Boilerplate From GitHub">
