--- a/launch-in-five-minutes.mdx
+++ b/launch-in-five-minutes.mdx
@@ -27,7 +27,7 @@ iconType: "solid"
         For detailed setup instructions, please refer to the guide below:
         - [SEO Optimisation](/configuration/config-files/seo-config)
 
-        **TL;DR:** Change out the `icon.ico` in the `app` folder and configure your app's metadata in the `seo.config.ts` file.
+        **TL;DR:** Change out the `icon.ico` in the `app` folder and configure your app's metadata in the [seo.config.ts](/configuration/config-files/seo-config) file.
     </Step>
 
     <Step title="Landing Page Configuration">
