change to kebab case

--- a/configuration/data-files.mdx
+++ b/configuration/data-files.mdx
@@ -7,36 +7,36 @@ In order to launch the landing page, we'll just have to replace the **Lorem Ipsu
 
 ### features-data.ts
 
-This file contains the data for each of the features in the `Features.tsx` component — the three ones shown at the bottom of the page.
+This file contains the data for each of the features in the `features.tsx` component — the three ones shown at the bottom of the page.
 
 ![Features Component Preview](../assets/components/features.jpg)
 
 ### features-list-data.ts
 
-This file contains the data for each of the features in the `FeaturesList.tsx` component.
+This file contains the data for each of the features in the `features-list.tsx` component.
 
 ![Features List Component Preview](../assets/components/features-list.jpg)
 
 ### stats-data.ts
 
-This file contains the data for the `Stats.tsx` component.
+This file contains the data for the `stats.tsx` component.
 
 ![Stats Component Preview](../assets/components/stats.jpg)
 
 ### testimonials-data.ts
 
-This file contains the data for the `TestimonialsGrid.tsx` and `TestimonialSidePanel.tsx` components.
+This file contains the data for the `testimonials-grid.tsx` and `testimonial-side-panel.tsx` components.
 
 ![TestimonialsGrid Component Preview](../assets/components/testimonials-grid.jpg)
 
 ### faq-data.ts
 
-This file contains the data for the `FAQ.tsx` component.
+This file contains the data for the `faq.tsx` component.
 
 ![FAQ Component Preview](../assets/components/faq.jpg)
 
 ### footer-data.ts
 
-This file contains the data for the `Footer.tsx` component — split into `footerLinks` (the main links) and `bottomLinks` (the links at the bottom of the footer).
+This file contains the data for the `footer.tsx` component — split into `footerLinks` (the main links) and `bottomLinks` (the links at the bottom of the footer).
 
 ![Footer Component Preview](../assets/components/footer.jpg)
