change docs for blog posts

--- a/changelog.mdx
+++ b/changelog.mdx
@@ -4,7 +4,12 @@ description: "This is a list of new features, bug fixes, and improvement made to
 icon: "list"
 ---
 
-### 05-02-2025
+## 07-02-2025
+
+**Features**
+- 2mrw now supports SEO-optimised Blog Posts. You can refer to the [Blog Post](/configuration/blog-posts) setup guide on how to create and SEO optimise them.
+
+## 05-02-2025
 
 **Features**
 
@@ -14,7 +19,7 @@ icon: "list"
 
 -   The `react-emails-folder` has been moved to fix an error when bundling the project (`npm run build`).
 
-### 25-01-2025
+## 25-01-2025
 
 **This boilerplate has been launched with the following features:**
 
