--- a/configuration/blog-posts.mdx
+++ b/configuration/blog-posts.mdx
@@ -29,12 +29,21 @@ tag: string
 ---
 ```
 
-### Example Metadata
+## Creating Content
 
-```typescript
+You can write your post content using standard MDX syntax. MDX supports all standard Markdown features such as headings, bullet points, etc.
+
+<Tip>
+    For images and videos, it's recommended to use cloud-hosted URLs rather than including them directly in
+    the repository. This helps keep the repository size small and manageable.
+</Tip>
+
+## Example Complete Post
+
+````mdx
 ---
-title: "From 0 - 100K Developers In 12 Months"
-description: "How trigger.dev scaled to 100k developers in less than 12 months"
+title: "Getting Started with MDX"
+description: "Learn how to create your first MDX blog post"
 date: "2025-02-01"
 readTime: "7 min"
 author:
@@ -45,57 +54,15 @@ author:
 coverImage: "https://cdn.prod.website-files.com/66f29fc1a009998749da917b/674f20c7d2bd1824715250bd_blog-p-500.jpg"
 tag: "Engineering"
 ---
-```
-
-## Writing Content
-
-You can write your post content using standard MDX syntax. MDX supports all standard Markdown features such as headings, bullet points, etc.
-
-### Content Examples
-
-````mdx
-## Section Heading
-
-Regular paragraphs can include **bold**, _italic_, and `inline code` formatting.
-
-### Lists
-
--   Use bullet points for unordered lists
--   Support for nested items
-    -   Like this
-    -   And this
-
-1. Numbered lists
-2. Are also supported
-
-### Code Blocks
-
-```typescript
-const example = "Your code here";
-console.log(example);
-```
-````
-
-## Example Complete Post
-
-```mdx
----
-title: "Getting Started with MDX"
-description: "Learn how to create your first MDX blog post"
-date: "2025-02-06"
-readTime: "5 min"
-author:
-    name: "Jane Smith"
-    role: "Technical Writer"
-    company: "TechCo"
-    image: "/images/authors/jane-smith.jpg"
-coverImage: "/images/blog/mdx-intro.jpg"
-tag: "Tutorial"
----
 
 ## Introduction
 
 Welcome to this guide on creating MDX blog posts. Let's explore the basics...
 
-[...]
+```typescript
+const example = "Your code here";
+console.log(example);
 ```
+
+[...]
+````
