--- a/configuration/blog-posts.mdx
+++ b/configuration/blog-posts.mdx
@@ -26,6 +26,7 @@ author: {
 }
 coverImage: string
 tag: string
+keywords: string[]
 ---
 ```
 
@@ -34,8 +35,8 @@ tag: string
 You can write your post content using standard MDX syntax. MDX supports all standard Markdown features such as headings, bullet points, etc.
 
 <Tip>
-    For images and videos, it's recommended to use cloud-hosted URLs rather than including them directly in
-    the repository. This helps keep the repository size small and manageable.
+    For images and videos, it's recommended to use cloud-hosted URLs rather than including them
+    directly in the repository. This helps keep the repository size small and manageable.
 </Tip>
 
 ## Example Complete Post
@@ -53,6 +54,7 @@ author:
     image: "https://i.imgur.com/E6nCVLy.jpeg"
 coverImage: "https://cdn.prod.website-files.com/66f29fc1a009998749da917b/674f20c7d2bd1824715250bd_blog-p-500.jpg"
 tag: "Engineering"
+keywords: ["web development", "scaling", "developer tools", "startup growth"]
 ---
 
 ## Introduction
