--- a/configuration/ci-and-cd.mdx
+++ b/configuration/ci-and-cd.mdx
@@ -27,7 +27,7 @@ Please also make sure to assign the appropiate domains to the `Preview (preview.
         In order to preview the changes, we need to build the preview environment using the following command:
 
         ```bash
-        vercel --name preview
+        vercel deploy --target=preview
         ```
 
         This will trigger a preview build and our preview URL will be assigned to the preview environment (e.g., `preview.example.com`) - which we have defined earlier.
